changes to add docker example